# horreum-client-python

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GET_STARTED.md  Makefile  README.md  dev-constraints.txt  dev-requirements.txt  noxfile.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backport.yaml  check-openapi-change.yaml  ci.yaml  generate-client.yaml  publish.yaml  update-client.yaml  update-kiota.yaml
docs/: GET_STARTED.md  RELEASE.md
examples/: basic_example.py  read_only_example.py
examples/data/: acme_transformer.json  acme_transformer_extractors.json  protected_test.json  roadrunner_run.json  roadrunner_run_data.json  roadrunner_test.json
scripts/: next-dev-cycle.sh  update-version.sh
src/horreum/: horreum_client.py  keycloak_access_provider.py
src/horreum/raw_client/: .gitignore  __init__.py  kiota-lock.json
src/horreum/service/: __init__.py  info_service.py
test/: horreum_client_it.py  horreum_client_test.py  workflow_dispatch_event_example.json
